css/ucb-class-notes-list.css
.ucb-class-note-link, .ucb-class-note-header-bullet{
  font-size: 200%;
  font-weight: 700;
  color: #959595 !important;
  margin: 0;
}

.ucb-class-note-header-bullet{
  margin: 0px 10px;
}

.ucb-class-note-header{
  flex-direction: row;
  display: flex;
  margin-bottom: 10px;
}

.ucb-class-note-title{
  font-size: 200%;
  font-weight: 700;
  margin: 0;
  line-height: inherit;
}

.ucb-class-note-link:hover{
  color: #333 !important;
}

.ucb-class-notes-list-container{
  margin-top: 20px;
}

.class-note-posted-date{
  font-size: 75%;
}

.ucb-class-notes-list-note-item{
  margin-bottom: 20px;
    border-bottom: 1px solid rgba(128, 128, 128, 0.333);
}

.class-note-year-select, .ucb-class-notes-filter-label{
  margin-right: 10px;
}

.ucb-class-note-image{
  padding-bottom: 10px;
}

.ucb-list-msg {
    font-size: 1.25em;
    font-weight: bolder;
    text-align: center;
  }
  
  .ucb-loading-data {
    color: #01579b;
    text-align: center;
  }
  
  .ucb-list-msg,
  .ucb-loading-data {
    display: block;
  }
  .ucb-list-msg[hidden],
  .ucb-loading-data[hidden] {
    display: none;
  }

.class-notes-list-filter{
  display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    align-items: center;
    padding: 10px;
    border: 1px solid rgba(128, 128, 128, 0.333);
    min-width: auto;
}

.ucb-class-notes-filter-label{
  font-size: 85%;
    font-weight: 600;
}

.ucb-class-notes-view-all-container{
  flex: 1;
  text-align: right;
  font-size: 85%;
}
.ucb-class-notes-read-more-container{
  text-align: center;
}
.ucb-class-notes-read-more{
  padding: 5px 10px;
    font-weight: bold;
    font-family: "Roboto","Helvetica Neue",Helvetica,Arial,sans-serif;
    margin-bottom: 5px;
    background-clip: padding-box;
    color: #0277BD !important;
    border: 1px solid #0277BD;
    border-radius: 0px;
    background-color: transparent;
    text-decoration: none;
}

.ucb-class-notes-read-more:hover {
  transition: background-color 0.25s ease,border-color 0.25s ease,color 0.25s ease;
  background-color: #0277BD;
  color: white !important;
}

@media only screen and (max-width: 575px) {
  .ucb-class-note-data{
    flex-direction: column-reverse;
  }
}

@media only screen and (max-width: 525px) {
  .ucb-class-notes-view-all-container{
    flex: auto;
    text-align: inherit;
  }
}

